#include "engine/Engine.hpp"

#include "engine/Bitmap3D.hpp"
#include "engine/Window.hpp"
#include "renderer/Renderer.hpp"
#include "scene/core/Scene.hpp"
#include "settings.hpp"
#include <string>
#include "util/WavefrontLoader.hpp"

///////////////////////////////////////////////////////////////////////////////////////////////////////////////
// * ------------------------------------ [ CONSTRUCTORS/DESCTUCTOR ] ------------------------------------ * //
///////////////////////////////////////////////////////////////////////////////////////////////////////////////

// default constructor taking in the widht, height and render pipeline type
Engine::Engine(int w, int h, RenderType r)
    : scene(w, h), window(w, h), bitmap(w, h), renderType(r)
{}

///////////////////////////////////////////////////////////////////////////////////////////////////////////////
// * ----------------------------------------- [ PUBLIC METHODS ] ---------------------------------------- * //
///////////////////////////////////////////////////////////////////////////////////////////////////////////////

// performs a dracall, drawing a frame into the bitmap
void Engine::drawCall() {
    framesRendered++;
    
    bitmap.clear();

    if (renderType == RenderType::RAY_TRACER) {
        scene.toCameraSpace();
    
        Renderer::rayTrace(bitmap, scene);
    }
    else {
        scene.toCameraSpace();
        scene.toViewportSpace();

        Renderer::rasterize(bitmap, scene);
    }

    scene.cleanup();

    window.update(bitmap.getFrameBuffer());

    #ifdef SAVE_IMAGE
    files::saveAsPPM(bitmap, "frame" + std::to_string(framesRendered) + ".ppm");
    #endif
}

// closes the window
void Engine::closeWindow() {
    window.close();
}
